# tusmongus

./: .clang-format  .gitignore  CMakeLists.txt
api/: arkena_mod.lib
api/include/ark/: mod.hpp  setting.hpp
data/: base_dico.txt  base_list.txt  list.txt
include/amodus/: gamestate.hpp  player.hpp
include/amodus/role/: jester.hpp
include/tmg/: font.hpp  mod.hpp  tusmo.hpp  ui.hpp
list_filter/: main.cpp
shared/: arkena_mod.lib
shared/include/ark/: hook.hpp  mod.hpp  module.hpp
shared/include/au/: core.hpp  gamestate.hpp  mod.hpp  network.hpp  player.hpp
shared/include/il2cpp/: api.hpp
source/: main.cpp
source/tmg/: font.cpp  list.txt  mod.cpp  tusmo.cpp  ui.cpp  words10.txt  words6.txt  words7.txt  words8.txt  words9.txt
